[package]
name = "rsmq_async"
version = "13.0.0"
authors = ["David Bonet <webbonet@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Async RSMQ port to rust. RSMQ is a simple redis queue system that works in any redis v2.4+. It contains the same methods as the original one in https://github.com/smrchy/rsmq"
homepage = "https://crates.io/crates/rsmq_async"
repository = "https://github.com/Couragium/rsmq-async-rs"
documentation = "https://docs.rs/rsmq_async/"
readme = "README.md"

[dependencies]
lazy_static = "^1"
rand = "^0.9"
radix_fmt = "^1"
bb8-redis = "^0.20"
thiserror = "^2"
redis = { version = "^0.28", default-features = false, features = [
    "acl",
    "keep-alive",
    "script",
] }
tokio = { version = "^1", optional = true }

[dev-dependencies]
net2 = "^0.2"
tokio = { version = "^1", features = ["rt-multi-thread"] }

[features]
default = ["tokio-comp", "sync"]
sync = ["tokio"]
tokio-comp = ["redis/tokio-comp"]
async-std-comp = ["redis/async-std-comp"]
break-js-comp = []
