[package]
name = "rsmq_async"
version = "18.0.0"
authors = ["David Bonet <webbonet@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Async RSMQ port to rust. RSMQ is a simple redis queue system that works in any redis v2.4+. It contains the same methods as the original one in https://github.com/smrchy/rsmq"
homepage = "https://github.com/DavidBM/rsmq-async-rs"
repository = "https://github.com/DavidBM/rsmq-async-rs"
documentation = "https://docs.rs/rsmq_async/"
readme = "README.md"

[dependencies]
lazy_static = "^1"
rand = "^0.10"
radix_fmt = "^1"
bb8 = "^0.9"
thiserror = "^2"
redis = { version = "^1", default-features = false, features = [
    "acl",
    "script",
] }
tokio = { version = "^1", optional = true }
serde = { version = "^1", optional = true }
serde_json = { version = "^1", optional = true }
futures-util = { version = "^0.3", optional = true, default-features = false, features = [
    "std",
] }
log = { version = "^0.4", optional = true }

[dev-dependencies]
net2 = "^0.2"
tokio = { version = "^1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

[features]
default = ["tokio-comp", "sync", "serde", "worker"]
sync = ["dep:tokio"]
tokio-comp = ["redis/tokio-comp"]
smol-comp = ["redis/smol-comp"]
break-js-comp = []
serde = ["dep:serde", "dep:serde_json"]
# Async worker helper. Tokio-only for now (uses tokio::time and tokio::select!).
worker = [
    "tokio-comp",
    "dep:tokio",
    "tokio/time",
    "tokio/macros",
    "dep:futures-util",
    "dep:log",
]

[[example]]
name = "serde_message"
required-features = ["serde"]

[[example]]
name = "worker_helper"
required-features = ["worker"]
