[package]
name = "rbmq"
version = "1.0.0-alpha.1"
authors = ["David Bonet <webbonet@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Redis Better Message Queue. A small, atomic, Redis-backed queue. All semantics live in Lua scripts shared with the Node.js client. Successor to rsmq_async, no JS-rsmq wire compatibility."
homepage = "https://github.com/DavidBM/rsmq-async-rs"
repository = "https://github.com/DavidBM/rsmq-async-rs"
documentation = "https://docs.rs/rbmq/"
readme = "README.md"

[dependencies]
rand = "^0.10"
bb8 = "^0.9"
thiserror = "^2"
redis = { version = "^1", default-features = false, features = [
    "acl",
    "script",
] }
tokio = { version = "^1", optional = true }
serde = { version = "^1", optional = true }
serde_json = { version = "^1", optional = true }
futures-util = { version = "^0.3", optional = true, default-features = false, features = [
    "std",
] }
log = { version = "^0.4", optional = true }

[dev-dependencies]
net2 = "^0.2"
tokio = { version = "^1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

[features]
default = ["tokio-comp", "sync", "serde", "worker"]
sync = ["dep:tokio"]
tokio-comp = ["redis/tokio-comp"]
smol-comp = ["redis/smol-comp"]
serde = ["dep:serde", "dep:serde_json"]
# Async worker helper. Tokio-only for now (uses tokio::time and tokio::select!).
worker = [
    "tokio-comp",
    "dep:tokio",
    "tokio/time",
    "tokio/macros",
    "dep:futures-util",
    "dep:log",
]

[[example]]
name = "serde_message"
required-features = ["serde"]

[[example]]
name = "worker_helper"
required-features = ["worker"]
